--- a/Angular-Form-Firebase/src/app/components/home/home.component.html
+++ b/Angular-Form-Firebase/src/app/components/home/home.component.html
@@ -6,8 +6,8 @@
     </div>
     <div class="row mt-2">
       <div class="col">
-        <button (click)="resetDatabase()" [disabled]="resetInProgress" class="btn btn-primary">
-          {{ resetInProgress ? 'Please wait...' : 'Reset Database' }}
+        <button (click)="resetDatabase()" [disabled]="resetInProgress" class="btn fw-bold">
+          {{ resetInProgress ? 'Please wait...' : 'RESET DATABASE' }}
         </button>
       </div>
     </div>
