--- a/Angular-Form-Firebase/src/app/components/customer-list/customer-list.component.html
+++ b/Angular-Form-Firebase/src/app/components/customer-list/customer-list.component.html
@@ -1,36 +1,34 @@
-<section class="container" style="margin-bottom: 8rem;">
+<section class="container-fluid w-100 mt-2" style="margin-bottom: 8rem;">
     <table class="table table-hover">
-        <thead>
-            <tr class="text-center">
-                <th scope="col">#</th>
-                <th scope="col">DB ID</th>
-                <th scope="col">First Name</th>
-                <th scope="col">Last Name</th>
-                <th scope="col">Email</th>
-                <th scope="col">Gender</th>
-                <th scope="col">Subscribed to newsletter</th>
-                <th scope="col">VIP</th>
-                <th scope="col">BIO</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr (click)="openModal(customer)" *ngFor="let customer of users$ | async; let i = index" class="text-center">
-                <td>{{i + 1}}</td>
-                <td>{{customer.id}}</td>
-                <td>{{customer.firstName}}</td>
-                <td>{{customer.lastName}}</td>
-                <td>{{customer.email}}</td>
-                <td>{{customer.gender}}</td>
-                <td>{{customer.newsletter}}</td>
-                <td>{{customer.isVIP ? 'Yes' : 'No'}}</td>
-                <td><button class="btn btn-warning">Check BIO</button></td>
-            </tr>
-        </tbody>
+      <thead>
+          <tr class="text-center">
+              <th scope="col">#</th>
+              <th scope="col">First Name</th>
+              <th scope="col">Last Name</th>
+              <th scope="col">Email</th>
+              <th scope="col">Gender</th>
+              <th scope="col">Subscribed to newsletter</th>
+              <th scope="col">VIP</th>
+              <th scope="col">BIO</th>
+          </tr>
+      </thead>
+      <tbody>
+          <tr (click)="openModal(customer)" *ngFor="let customer of users$ | async; let i = index" class="text-center">
+              <td>{{i + 1}}</td>
+              <td>{{customer.firstName}}</td>
+              <td>{{customer.lastName}}</td>
+              <td>{{customer.email}}</td>
+              <td>{{customer.gender}}</td>
+              <td>{{customer.newsletter}}</td>
+              <td>{{customer.isVIP ? 'Yes' : 'No'}}</td>
+              <td><button class="btn btn-warning">Check BIO</button></td>
+          </tr>
+      </tbody>
     </table>
 
-    <app-customer-detail
-    *ngIf="custDetailIsVisible"
-    (closeModal)="closeModal()"
-    [custDetail]="customerDetail"
-    ></app-customer-detail>
-</section>
+  </section>
+  <app-customer-detail
+  *ngIf="custDetailIsVisible"
+  (closeModal)="closeModal()"
+  [custDetail]="customerDetail"
+  ></app-customer-detail>
