--- a/Angular-Form-Firebase/src/app/components/home/home.component.scss
+++ b/Angular-Form-Firebase/src/app/components/home/home.component.scss
@@ -3,3 +3,21 @@
   background-image: url('https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
   background-size: cover;
 }
+
+button {
+  background: none;
+  color: white;
+  border: 4px solid;
+  border-radius: 0.5em;
+  padding: 1em 1.5em;
+  font-size: 1em;
+  transition: all 0.25s;
+}
+
+button:hover {
+  border-color: #0d6efd;
+  color: white;
+  font-weight: 400;
+  box-shadow: 0 0.5em 0.5em -0.4em #0d6efd;
+  transform: translateY(-0.25em);
+}
