--- a/Angular-Form-Firebase/src/app/components/customer-list/customer-detail/customer-detail.component.html
+++ b/Angular-Form-Firebase/src/app/components/customer-list/customer-detail/customer-detail.component.html
@@ -1,7 +1,7 @@
 <div class="container">
-  <div class="card mb-1" style="width: 18rem;">
-    <img class="card-img-top" src="https://cdn-icons-png.flaticon.com/512/2115/2115958.png" alt="Card image cap">
-    <div class="card-body d-flex flex-column">
+  <div class="card mb-1">
+    <img class="card-img-top p-1" src="https://cdn-icons-png.flaticon.com/512/2115/2115958.png" alt="Card image cap">
+    <div class="card-body d-flex flex-column pt-2">
       <h5 class="card-title">{{custDetail?.firstName}} {{custDetail?.lastName}}</h5>
       <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam vero, porro dolor consequatur harum aliquam alias. Labore at tempore aspernatur? Eum vel officia pariatur dolorum quam velit, cupiditate dolores corrupti?</p>
       <a class="btn btn-success" (click)="emitCloseModal()">Back to Customer List</a>
