--- a/Angular_Customer_Database/src/app/components/customer-list/customer-list.component.html
+++ b/Angular_Customer_Database/src/app/components/customer-list/customer-list.component.html
@@ -1,5 +1,5 @@
 <section class="container-fluid w-100 mt-2" style="margin-bottom: 8rem;">
-    <table class="table">
+    <table class="table table-borderless">
       <thead>
           <tr class="text-center">
               <th scope="col">#</th>
