--- a/Angular_Customer_Database/src/app/components/customer-list/customer-list.component.scss
+++ b/Angular_Customer_Database/src/app/components/customer-list/customer-list.component.scss
@@ -27,23 +27,25 @@ tbody tr {
 
 tbody tr:hover {
   box-shadow: 0 0.5em 0.5em -0.4em #0d6efd;
+  background: #bad2f730;
+  border-radius: 10px;
   transform: translateY(-0.35em);
   transition: all 0.25s;
 }
 
 table button {
   background: none;
-  color: #0d6efd;
+  color: #198754;
   border: 3px solid;
   border-radius: 0.5em;
   font-size: 1em;
   transition: all 0.25s;
 }
 table button:hover {
-  background: #0d6efd;
-  border-color: #0d6efd;
+  background: #198754;
+  border-color: #198754;
   color: white;
-  box-shadow: 0 0.5em 0.5em -0.4em #0d6efd;
+  box-shadow: 0 0.5em 0.5em -0.4em #198754;
   transform: translateY(-0.15em);
 }
 
