--- a/Angular_Customer_Database/src/app/components/customer-list/customer-list.component.html
+++ b/Angular_Customer_Database/src/app/components/customer-list/customer-list.component.html
@@ -21,7 +21,7 @@
               <td>{{customer.gender}}</td>
               <td>{{customer.newsletter}}</td>
               <td>{{customer.isVIP ? 'Yes' : 'No'}}</td>
-              <td><button class="btn btn-warning">Check BIO</button></td>
+              <td><button class="btn">Check BIO</button></td>
           </tr>
       </tbody>
     </table>
