--- a/Angular_Customer_Database/src/app/components/customer-list/customer-detail/customer-detail.component.scss
+++ b/Angular_Customer_Database/src/app/components/customer-list/customer-detail/customer-detail.component.scss
@@ -1,11 +1,15 @@
 .card {
   max-width: 20rem;
-  max-height: 90%;
   box-shadow: 3px 3px 6px 1px #0d6dfd95;
   position: fixed;
   top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
+
+  &-img-top {
+    width: 70%;
+    margin: 0 auto;
+  }
 }
 
 a {
